Enable Hakijaryhma Tests with db