@@ -1,6 +1,7 @@
 package fi.vm.sade.sijoittelu;
 
 import static fi.vm.sade.sijoittelu.batch.logic.impl.algorithm.PrintHelper.tulostaSijoittelu;
+import static org.springframework.test.context.jdbc.SqlConfig.TransactionMode.ISOLATED;
 
 import fi.vm.sade.sijoittelu.batch.logic.impl.DomainConverter;
 import fi.vm.sade.sijoittelu.batch.logic.impl.algorithm.SijoitteluConfiguration;
@@ -17,6 +18,8 @@ import fi.vm.sade.sijoittelu.domain.SijoitteluAjo;
 import fi.vm.sade.sijoittelu.domain.Valintatapajono;
 import fi.vm.sade.testing.AbstractIntegrationTest;
 import fi.vm.sade.valintalaskenta.domain.dto.valintatieto.HakuDTO;
+import fi.vm.sade.valintalaskenta.domain.valinta.Hakijaryhma;
+import fi.vm.sade.valintalaskenta.domain.valinta.Jonosija;
 import fi.vm.sade.valintalaskenta.tulos.service.impl.ValintatietoService;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Disabled;
@@ -25,9 +28,12 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationContext;
+import fi.vm.sade.valintalaskenta.domain.testdata.TestEntityDataUtil;
+import org.springframework.test.context.jdbc.Sql;
+import org.springframework.test.context.jdbc.SqlConfig;
 
-import java.time.LocalDateTime;
-import java.time.ZoneId;
+import java.time.*;
+import java.time.temporal.TemporalAccessor;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -36,164 +42,172 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class HakijaryhmaTest extends AbstractIntegrationTest {
-    private static final Logger LOG = LoggerFactory.getLogger(HakijaryhmaTest.class);
-    @Autowired
-    private ValintatietoService valintatietoService;
+  private static final Logger LOG = LoggerFactory.getLogger(HakijaryhmaTest.class);
+  @Autowired
+  private ValintatietoService valintatietoService;
 
-    @Autowired
-    private ApplicationContext applicationContext;
+  @Autowired
+  private ApplicationContext applicationContext;
 
-	@Test
-    //@UsingDataSet(locations = "vaasan_yliopisto_valinnan_vaiheet.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
-	public void testSijoitteluOneHakijaryhma() {
+  @Test
+  @Sql("vaasan_yliopisto_valinnan_vaiheet.sql")
+  public void testSijoitteluHakijaryhmalla() {
 
-        HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
+    HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
 
-        List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
-        SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap());
+    List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+    SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap());
 
-        System.out.println(tulostaSijoittelu(s));
+    System.out.println(tulostaSijoittelu(s));
 
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "1.2.246.562.11.00001067411", "1.2.246.562.11.00001068863");
-
-
-	}
-
-    @Test
-    //@UsingDataSet(locations = "vaasan_yliopisto_valinnan_vaiheet_kaksi_hakijaryhmaa.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
-    public void testSijoitteluTwoHakijaryhma() {
-
-        HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
-
-        List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
-        SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap());
-
-        System.out.println(tulostaSijoittelu(s));
-
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "1.2.246.562.11.00001067411", "1.2.246.562.11.00001090792");
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "1.2.246.562.11.00001067411", "1.2.246.562.11.00001068863");
 
 
-    }
+  }
 
-    @Test
-    //@UsingDataSet(locations = "vaasan_yliopisto_valinnan_vaiheet_kaksi_hakijaryhmaa_toinen_eri_jonossa.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
-    public void testSijoitteluTwoHakijaryhmaToisessaEriJono() {
+  @Test
+  @Sql("vaasan_yliopisto_valinnan_vaiheet_kaksi_hakijaryhmaa.sql")
+  public void testSijoitteluKaksiHakijaryhmaa() {
 
-        HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
+    HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
 
-        List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
-        SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap());
+    List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+    SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap());
 
-        System.out.println(tulostaSijoittelu(s));
-        Assertions.assertEquals(2, hakukohteet.get(0).getHakijaryhmat().size());
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "1.2.246.562.11.00001068863", "1.2.246.562.11.00001067411");
-    }
+    System.out.println(tulostaSijoittelu(s));
 
-    @Test
-    //@UsingDataSet(locations = "vaasan_yliopisto_valinnan_vaiheet_ei_hakijaryhmaa.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
-    public void testSijoitteluEiHakijaryhma() {
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "1.2.246.562.11.00001067411", "1.2.246.562.11.00001090792");
 
-        HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
 
-        List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
-        SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap());
+  }
 
-        System.out.println(tulostaSijoittelu(s));
+  @Test
+  @Sql("vaasan_yliopisto_valinnan_vaiheet_kaksi_hakijaryhmaa_toinen_eri_jonossa.sql")
+  public void testSijoitteluKaksiHakijaryhmaaToisessaEriJono() {
 
-        Assertions.assertEquals(0, hakukohteet.get(0).getHakijaryhmat().size());
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "1.2.246.562.11.00001068863", "1.2.246.562.11.00001090792", "1.2.246.562.11.00001067411");
-    }
+    HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
 
-    @Test
-    @Disabled
-    //@UsingDataSet(locations = "alitaytto_simple_case.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
-    // Korjaa tämä kun ikiluuppi on korjattu
-    public void testAlitayttoRekursio() {
+    List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+    SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap());
 
-        HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
+    System.out.println(tulostaSijoittelu(s));
+    Assertions.assertEquals(2, hakukohteet.get(0).getHakijaryhmat().size());
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "1.2.246.562.11.00001068863", "1.2.246.562.11.00001067411");
+  }
 
-        List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
-        final SijoitteluajoWrapper sijoitteluAjo = createSijoitteluajoWrapper(hakukohteet);
-        SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(sijoitteluAjo);
-        sijoitteluAjo.setKaikkiKohteetSijoittelussa(LocalDateTime.now().plusDays(10));
+  @Test
+  @Sql("vaasan_yliopisto_valinnan_vaiheet_ei_hakijaryhmaa.sql")
+  public void testSijoitteluEiHakijaryhma() {
 
-        LOG.info("\r\n{}", tulostaSijoittelu(s));
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "hakija1");
+    HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
 
-    }
+    List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+    SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap());
 
-    @Test
-    //@UsingDataSet(locations = "ylitaytto_simple_case.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
-    public void testYlitayttoRekursio() {
+    System.out.println(tulostaSijoittelu(s));
 
-        HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
+    Assertions.assertEquals(0, hakukohteet.get(0).getHakijaryhmat().size());
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "1.2.246.562.11.00001068863", "1.2.246.562.11.00001090792", "1.2.246.562.11.00001067411");
+  }
 
-        List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+  @Test
+  @Disabled
+  //@UsingDataSet(locations = "alitaytto_simple_case.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
+  // Korjaa tämä kun ikiluuppi on korjattu
+  public void testAlitayttoRekursio() {
 
-        final SijoitteluajoWrapper sijoitteluAjo = createSijoitteluajoWrapper(hakukohteet);
-        sijoitteluAjo.setKaikkiKohteetSijoittelussa(LocalDateTime.now().plusDays(10));
-        SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(sijoitteluAjo);
+    HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
 
-        LOG.info("\r\n{}", tulostaSijoittelu(s));
+    List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+    final SijoitteluajoWrapper sijoitteluAjo = createSijoitteluajoWrapper(hakukohteet);
+    SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(sijoitteluAjo);
+    sijoitteluAjo.setKaikkiKohteetSijoittelussa(LocalDateTime.now().plusDays(10));
 
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "hakija3", "hakija4", "hakija5");
+    LOG.info("\r\n{}", tulostaSijoittelu(s));
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "hakija1");
 
-    }
+  }
 
-    @Disabled
-    @Test
-    //@UsingDataSet(locations = "ylitaytto_vaihe.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
-    public void testYlitaytto() {
 
-        HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
+  @Test
+  @Sql("ylitaytto_simple_case.sql")
+  public void testYlitayttoRekursio() {
 
-        List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
-        final SijoitteluajoWrapper sijoitteluAjo = createSijoitteluajoWrapper(hakukohteet);
-        sijoitteluAjo.setKaikkiKohteetSijoittelussa(LocalDateTime.now().plusDays(10));
-        SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(sijoitteluAjo);
+    HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
 
-        System.out.println(tulostaSijoittelu(s));
+    List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+
+    final SijoitteluajoWrapper sijoitteluAjo = createSijoitteluajoWrapper(hakukohteet);
+    sijoitteluAjo.setKaikkiKohteetSijoittelussa(LocalDateTime.now().plusDays(10));
+    SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(sijoitteluAjo);
+
+    LOG.info("\r\n{}", tulostaSijoittelu(s));
+
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "hakemus3", "hakemus4", "hakemus5");
+
+  }
+
+  @Disabled
+  @Test
+  //@UsingDataSet(locations = "ylitaytto_vaihe.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
+  public void testYlitaytto() {
+
+    HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
+
+    List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+    final SijoitteluajoWrapper sijoitteluAjo = createSijoitteluajoWrapper(hakukohteet);
+    sijoitteluAjo.setKaikkiKohteetSijoittelussa(LocalDateTime.now().plusDays(10));
+    SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(sijoitteluAjo);
+
+    System.out.println(tulostaSijoittelu(s));
 
 //        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "hakija1", "hakija3", "hakija4", "hakija5");
 
-    }
+  }
 
-    @Test
-    //@UsingDataSet(locations = "vain_ryhmaan_kuuluvat_hyvaksytaan.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
-    public void testSijoitteluVainHakijaryhmaanKuuluvatVoivatTullaHyvaksytyksi() {
+  @Test
+  @Sql(scripts = "vain_ryhmaan_kuuluvat_hyvaksytaan.sql", config = @SqlConfig(transactionMode = SqlConfig.TransactionMode.ISOLATED))
+  public void testSijoitteluVainHakijaryhmaanKuuluvatVoivatTullaHyvaksytyksi() {
 
-        HakuDTO haku = valintatietoService.haeValintatiedot("haku1");
+    HakuDTO haku = valintatietoService.haeValintatiedot("haku1");
 
-        List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
-        SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap());
+    List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+    SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap());
 
-        System.out.println(tulostaSijoittelu(s));
+    System.out.println(tulostaSijoittelu(s));
 
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "hakemus1", "hakemus2");
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(1), "hakemus3");
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "hakemus1", "hakemus2");
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(1), "hakemus3");
 
 
-    }
+  }
 
-    @Test
-    //@UsingDataSet(locations = "toisensa_pois_sulkevat_hakijaryhmat.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
-    public void testSijoitteluToisensaPoisSulkevatRyhmat() {
+  @Test
+  @Sql(scripts = "toisensa_pois_sulkevat_hakijaryhmat.sql", config = @SqlConfig(transactionMode = SqlConfig.TransactionMode.ISOLATED))
+  public void testSijoitteluToisensaPoisSulkevatRyhmat() {
+    Hakijaryhma ryhma = new Hakijaryhma();
+    ryhma.hakijaryhmaOid = "ryhma1";
+    ryhma.hakukohdeOid = "hakukohde1";
 
-        HakuDTO haku = valintatietoService.haeValintatiedot("haku1");
+    HakuDTO haku = valintatietoService.haeValintatiedot("haku1");
 
-        List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
-        Assertions.assertThrows(IllegalStateException.class, () -> SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap()));
-    }
+    List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+    Assertions.assertThrows(IllegalStateException.class, () -> SijoitteluAlgorithmUtil.sijoittele(hakukohteet, Collections.emptyList(), Collections.emptyMap()));
+  }
 
-    @Test
-    //@UsingDataSet(locations = "hakijaryhma_varasijasaannot_paattyneet.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
-    public void testSijoitteluVarasijaSaannotPaattyneet() {
+  @Test
+  @Sql("hakijaryhma_varasijasaannot_paattyneet.sql")
+  //@UsingDataSet(locations = "hakijaryhma_varasijasaannot_paattyneet.json", loadStrategy = LoadStrategyEnum.CLEAN_INSERT)
+  public void testSijoitteluVarasijaSaannotPaattyneet() {
 
-        HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
-        List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
+    HakuDTO haku = valintatietoService.haeValintatiedot("1.2.246.562.29.173465377510");
+    haku.getHakukohteet().get(0).getValinnanvaihe().get(0).getValintatapajonot().stream()
+      .filter(v -> v.getNimi().equals("valintatapajono1")).forEach(v ->
+        v.setVarasijojaTaytetaanAsti(new Date(LocalDate.of(2016, Month.APRIL, 23).toEpochDay())));
+    List<Hakukohde> hakukohteet = haku.getHakukohteet().parallelStream().map(DomainConverter::convertToHakukohde).collect(Collectors.toList());
 
-        final SijoitteluajoWrapper sijoitteluAjo = createSijoitteluajoWrapper(hakukohteet);
-        sijoitteluAjo.setKaikkiKohteetSijoittelussa(LocalDateTime.now().plusDays(10));
+    final SijoitteluajoWrapper sijoitteluAjo = createSijoitteluajoWrapper(hakukohteet);
+    sijoitteluAjo.setKaikkiKohteetSijoittelussa(LocalDateTime.now().plusDays(10));
 
         /*
           Luodaan alkutilanne:
@@ -201,52 +215,52 @@ public class HakijaryhmaTest extends AbstractIntegrationTest {
           valintatapajono1: A (HYVÄKSYTTY), B (VARALLA)
           valintatapajono2: C (HYVÄKSYTTY), D (VARALLA)
          */
-        SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(sijoitteluAjo);
-        System.out.println(tulostaSijoittelu(s));
+    SijoittelunTila s = SijoitteluAlgorithmUtil.sijoittele(sijoitteluAjo);
+    System.out.println(tulostaSijoittelu(s));
 
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "A");
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(1), "C");
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "A");
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(1), "C");
 
         /*
           Muokataan kiintiöitä, että B ja D uudelleen sijoitellaan. Lisäksi
           lisätään ensimmäiselle valintatapajonolle varasijatäyttö päättyneeksi,
           joten D tulisi ainoastaan hyväksyä tässä sijoittelussa.
          */
-        s.sijoitteluAjo.getHakukohteet().stream()
-                .flatMap(hk -> hk.getHakijaryhmaWrappers().stream())
-                .map(HakijaryhmaWrapper::getHakijaryhma)
-                .forEach(hk -> hk.setKiintio(4));
-        s.sijoitteluAjo.getHakukohteet().forEach(hk -> {
-            List<Valintatapajono> valintatapajonot = hk.getValintatapajonot().stream().map(ValintatapajonoWrapper::getValintatapajono).collect(Collectors.toList());
-            valintatapajonot.forEach(vtj -> vtj.setAloituspaikat(2));
-            valintatapajonot.stream().filter(v -> v.getNimi().equals("valintatapajono1")).forEach(v -> {
-                Date kolmePaivaaSitten = Date.from(LocalDateTime.now().minusDays(3L).atZone(ZoneId.systemDefault()).toInstant());
-                v.setVarasijojaTaytetaanAsti(kolmePaivaaSitten);
-            });
-        });
+    s.sijoitteluAjo.getHakukohteet().stream()
+      .flatMap(hk -> hk.getHakijaryhmaWrappers().stream())
+      .map(HakijaryhmaWrapper::getHakijaryhma)
+      .forEach(hk -> hk.setKiintio(4));
+    s.sijoitteluAjo.getHakukohteet().forEach(hk -> {
+      List<Valintatapajono> valintatapajonot = hk.getValintatapajonot().stream().map(ValintatapajonoWrapper::getValintatapajono).toList();
+      valintatapajonot.forEach(vtj -> vtj.setAloituspaikat(2));
+      valintatapajonot.stream().filter(v -> v.getNimi().equals("valintatapajono1")).forEach(v -> {
+        Date kolmePaivaaSitten = Date.from(LocalDateTime.now().minusDays(3L).atZone(ZoneId.systemDefault()).toInstant());
+        v.setVarasijojaTaytetaanAsti(kolmePaivaaSitten);
+      });
+    });
 
-        SijoittelunTila s2 = SijoitteluAlgorithmUtil.sijoittele(s.sijoitteluAjo);
-        System.out.println(tulostaSijoittelu(s2));
+    SijoittelunTila s2 = SijoitteluAlgorithmUtil.sijoittele(s.sijoitteluAjo);
+    System.out.println(tulostaSijoittelu(s2));
 
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "A");
-        assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(1), "C", "D");
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(0), "A");
+    assertoiAinoastaanValittu(hakukohteet.get(0).getValintatapajonot().get(1), "C", "D");
+  }
+
+  public static void assertoiAinoastaanValittu(Valintatapajono h, String... oids) {
+    List<String> wanted = Arrays.asList(oids);
+    List<String> actual = new ArrayList<>();
+    for (Hakemus hakemus : h.getHakemukset()) {
+      if (hakemus.getTila() == HakemuksenTila.HYVAKSYTTY) {
+        actual.add(hakemus.getHakemusOid());
+      }
     }
+    Assertions.assertTrue(actual.containsAll(wanted), "Actual result does not contain all wanted approved OIDs");
+    Assertions.assertTrue(wanted.containsAll(actual), "Wanted result contains more approved OIDs than actual");
+  }
 
-    public static void assertoiAinoastaanValittu(Valintatapajono h, String... oids) {
-        List<String> wanted = Arrays.asList(oids);
-        List<String> actual = new ArrayList<>();
-        for (Hakemus hakemus : h.getHakemukset()) {
-            if (hakemus.getTila() == HakemuksenTila.HYVAKSYTTY) {
-                actual.add(hakemus.getHakemusOid());
-            }
-        }
-        Assertions.assertTrue(actual.containsAll(wanted), "Actual result does not contain all wanted approved OIDs");
-        Assertions.assertTrue(wanted.containsAll(actual), "Wanted result contains more approved OIDs than actual");
-    }
-
-    private SijoitteluajoWrapper createSijoitteluajoWrapper(List<Hakukohde> hakukohteet) {
-        SijoitteluajoWrapper sijoitteluajoWrapper = SijoitteluajoWrapperFactory.createSijoitteluAjoWrapper(new SijoitteluConfiguration(), new SijoitteluAjo(), hakukohteet, Collections.emptyMap());
-        sijoitteluajoWrapper.paivitaVastaanottojenVaikutusHakemustenTiloihin(Collections.emptyList(), Collections.emptyMap());
-        return sijoitteluajoWrapper;
-    }
+  private SijoitteluajoWrapper createSijoitteluajoWrapper(List<Hakukohde> hakukohteet) {
+    SijoitteluajoWrapper sijoitteluajoWrapper = SijoitteluajoWrapperFactory.createSijoitteluAjoWrapper(new SijoitteluConfiguration(), new SijoitteluAjo(), hakukohteet, Collections.emptyMap());
+    sijoitteluajoWrapper.paivitaVastaanottojenVaikutusHakemustenTiloihin(Collections.emptyList(), Collections.emptyMap());
+    return sijoitteluajoWrapper;
+  }
 }
